# image-local

./: .env.docker.bak  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260507_0809_init_templates_and_api_profiles.py  20260507_0854_add_jobs_job_items_job_candidates.py  20260507_0924_add_is_selected_to_job_candidates.py
backend/app/: __init__.py  main.py
backend/app/api/: api_profiles.py  deps.py  files.py  health.py  images.py  jobs.py  sse.py  storage.py  templates.py
backend/app/core/: celery_app.py  crypto.py  db.py  logging.py  request_log.py  settings.py
backend/app/models/: __init__.py  api_profile.py  job.py  template.py
backend/app/schemas/: api_profile.py  image.py  job.py  template.py
backend/app/services/: event_bus.py  external_models.py  job_runner.py  openai_image.py  prompt_template.py  storage.py  template_seed.py
backend/app/tasks/: generate.py
backend/app/templates_data/: built_in.py
backend/tests/: conftest.py  test_aggregate_concurrency.py  test_api_profiles.py  test_cancel_aggregation.py  test_event_bus.py  test_health.py  test_health_ready.py  test_images_api.py  test_job_terminated.py  test_jobs_api.py  test_jobs_history_retry_delete.py  test_jobs_select_download.py  test_logging_intercept.py  test_openai_image.py  test_output_dir_normalization.py  test_prompt_template.py  test_storage_paths.py  test_storage_usage.py  test_templates_api.py  test_worker_cancel_short_circuit.py
docs/: 方案设计.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  package.json  (+4 more)
(+32 files in other folders)
